--- a/src/app/pages/status/cadastro-status/cadastro-status.component.html
+++ b/src/app/pages/status/cadastro-status/cadastro-status.component.html
@@ -1,6 +1,6 @@
 <main>
   <p-card styleClass="card-adjust">
-    <h4>{{ editando ? "EDIÇÃO DE" : "CADASTRO DE" }} VARA</h4>
+    <h4>{{ editando ? "EDIÇÃO DE" : "CADASTRO DE" }} STATUS</h4>
     <div class="flex justify-content-start mb-2">
       <div>
         <button
@@ -11,12 +11,16 @@
           icon="pi pi-caret-left"
           pTooltip="Voltar"
           tooltipPosition="top"
-          routerLink="/varas"
+          routerLink="/status"
         ></button>
       </div>
     </div>
     <br />
-    <form #formVara="ngForm" autocomplete="off" (ngSubmit)="salvar(formVara)">
+    <form
+      #formStatus="ngForm"
+      autocomplete="off"
+      (ngSubmit)="salvar(formStatus)"
+    >
       <div class="grid justify-content-center">
         <div class="col-12 md:col-6 lg:col-4">
           <h6><span class="obrigatorio">*</span>Descrição</h6>
@@ -25,25 +29,25 @@
             class="w-full"
             oninput="this.value = this.value.toUpperCase()"
             pInputText
-            name="vara"
+            name="status"
             type="text"
             [pKeyFilter]="regex.string"
-            [(ngModel)]="newvara.descricao"
-            #vara="ngModel"
+            [(ngModel)]="newstatus.descricao"
+            #status="ngModel"
             [disabled]="editando"
             required
             minlength="3"
           />
           <app-message
-            [control]="vara"
+            [control]="status"
             error="required"
             text="Informe a descrição"
           ></app-message>
           <app-message
-            [control]="vara"
+            [control]="status"
             error="minlength"
             text="Mínimo de {{
-              vara.errors?.minlength?.requiredLength
+              status.errors?.minlength?.requiredLength
             }} caracteres"
           ></app-message>
         </div>
@@ -56,7 +60,7 @@
       <div class="flex justify-content-center">
         <div class="flex align-items-center justify-content-center">
           <p-inputSwitch
-            [(ngModel)]="newvara.status"
+            [(ngModel)]="newstatus.status"
             name="status"
             [ngModelOptions]="{ standalone: true }"
             binary="true"
@@ -73,7 +77,7 @@
             type="submit"
             label="Salvar"
             icon="fas fa-save"
-            [disabled]="formVara.invalid || salvando"
+            [disabled]="formStatus.invalid || salvando"
             class="p-button-raised p-button-warning w-full"
           ></button>
         </div>
