--- a/src/app/pages/motivos/cadastro-motivo/cadastro-motivo.component.html
+++ b/src/app/pages/motivos/cadastro-motivo/cadastro-motivo.component.html
@@ -1,55 +1,25 @@
 <main>
   <p-card styleClass="card-adjust">
-    <h4>{{ editando ? "EDIÇÃO DE" : "CADASTRO DE" }} MOTIVO</h4>
+    <h4>{{ editando ? 'EDIÇÃO DE' : 'CADASTRO DE'}} Motivos</h4>
     <div class="flex justify-content-start mb-2">
       <div>
-        <button
-          pButton
-          pRipple
-          type="button"
-          class="p-button-raised p-button-warning"
-          icon="pi pi-caret-left"
-          pTooltip="Voltar"
-          tooltipPosition="top"
-          routerLink="/motivos"
-        ></button>
+        <button pButton pRipple type="button" class="p-button-raised p-button-warning" icon="pi pi-caret-left"
+          pTooltip="Voltar" tooltipPosition="top" routerLink="/motivos"></button>
       </div>
     </div>
     <br />
-    <form
-      #formMotivo="ngForm"
-      autocomplete="off"
-      (ngSubmit)="salvar(formMotivo)"
-    >
+    <form #formMotivo="ngForm" autocomplete="off" (ngSubmit)="salvar(formMotivo)">
       <div class="grid justify-content-center">
         <div class="col-12 md:col-6 lg:col-4">
           <h6><span class="obrigatorio">*</span>Descrição</h6>
           <!--TODO Forma de input uppercase sem diretiva -->
-          <input
-            class="w-full"
-            oninput="this.value = this.value.toUpperCase()"
-            pInputText
-            name="motivo"
-            type="text"
-            [pKeyFilter]="regex.string"
-            [(ngModel)]="newmotivo.descricao"
-            #motivo="ngModel"
-            [disabled]="editando"
-            required
-            minlength="3"
-          />
-          <app-message
-            [control]="motivo"
-            error="required"
-            text="Informe a descrição"
-          ></app-message>
-          <app-message
-            [control]="motivo"
-            error="minlength"
-            text="Mínimo de {{
+          <input class="w-full" oninput="this.value = this.value.toUpperCase()" pInputText name="motivo" type="text"
+            [pKeyFilter]="regex.string" [(ngModel)]="newmotivo.descricao" #motivo="ngModel"
+            required minlength="3" />
+          <app-message [control]="motivo" error="required" text="Informe a descrição"></app-message>
+          <app-message [control]="motivo" error="minlength" text="Mínimo de {{
               motivo.errors?.minlength?.requiredLength
-            }} caracteres"
-          ></app-message>
+            }} caracteres"></app-message>
         </div>
       </div>
       <div class="flex justify-content-center">
@@ -59,27 +29,16 @@
       </div>
       <div class="flex justify-content-center">
         <div class="flex align-items-center justify-content-center">
-          <p-inputSwitch
-            [(ngModel)]="newmotivo.status"
-            name="status"
-            [ngModelOptions]="{ standalone: true }"
-            binary="true"
-          >
+          <p-inputSwitch [(ngModel)]="newmotivo.status" name="status" [ngModelOptions]="{ standalone: true }"
+            binary="true">
           </p-inputSwitch>
         </div>
       </div>
       <br />
       <div class="flex flex-wrap justify-content-center">
         <div class="col-12 md:col-6 lg:col-4">
-          <button
-            pButton
-            pRipple
-            type="submit"
-            label="Salvar"
-            icon="fas fa-save"
-            [disabled]="formMotivo.invalid || salvando"
-            class="p-button-raised p-button-warning w-full"
-          ></button>
+          <button pButton pRipple type="submit" label="Salvar" icon="fas fa-save"
+            [disabled]="formMotivo.invalid || salvando" class="p-button-raised p-button-warning w-full"></button>
         </div>
         <!-- <div class="col-12 md:col-6 lg:col-4">
           <button pButton pRipple type="button" class="p-button-outlined p-button-primary w-full" icon="fas fa-trash"
@@ -89,12 +48,8 @@
       </div>
       <div *ngIf="salvando" class="grid justify-content-center mt-4">
         <div class="grid col-12 justify-content-center">
-          <p-progressSpinner
-            [style]="{ width: '50px', height: '50px' }"
-            styleClass="custom-spinner"
-            strokeWidth="8"
-            animationDuration=".5s"
-          >
+          <p-progressSpinner [style]="{ width: '50px', height: '50px' }" styleClass="custom-spinner" strokeWidth="8"
+            animationDuration=".5s">
           </p-progressSpinner>
         </div>
         <div class="grid col-12 justify-content-center">
