--- a/src/app/pages/varas/cadastro-varas/cadastro-varas.component.html
+++ b/src/app/pages/varas/cadastro-varas/cadastro-varas.component.html
@@ -27,7 +27,7 @@
             pInputText
             name="vara"
             type="text"
-            [pKeyFilter]="regex.string"
+            [pKeyFilter]="regex.stringNumber"
             [(ngModel)]="newvara.descricao"
             #vara="ngModel"
             [disabled]="editando"
