--- a/src/app/pages/varas/lista-varas/lista-varas.component.html
+++ b/src/app/pages/varas/lista-varas/lista-varas.component.html
@@ -96,11 +96,11 @@
               pButton
               pRipple
               type="button"
-              class="p-button-text p-button-primary"
+              class="p-button-warning"
               pTooltip="Editar"
-              icon="fas fa-pen"
+              icon="pi pi-file-edit"
               tooltipPosition="top"
-              [routerLink]="['/convenios', convenio.id]"
+              [routerLink]="['/varas', varas._id]"
             ></button>
           </td>
           <td
@@ -115,7 +115,11 @@
           >
             <span class="p-column-title">{{ cols.header }}:</span>
             {{
-              cols.data
+              cols.field === "status"
+                ? rowData[cols.field]
+                  ? "Ativo"
+                  : "Inativo"
+                : cols.data
                 ? (rowData[cols.field] | date: cols.format)
                 : rowData[cols.field]
             }}
