--- a/src/app/pages/varas/lista-varas/lista-varas.component.html
+++ b/src/app/pages/varas/lista-varas/lista-varas.component.html
@@ -44,7 +44,7 @@
           </th>
         </tr>
       </ng-template>
-      <ng-template pTemplate="body" let-convenio let-columns="columns" let-rowData>
+      <ng-template pTemplate="body" let-varas  let-columns="columns" let-rowData>
         <tr [pSelectableRow]="rowData">
           <td class="btnEditar">
             <button pButton pRipple type="button" class="p-button-warning" pTooltip="Editar" icon="pi pi-file-edit"
